# IDP-workbench

./: .dockerignore  Dockerfile  README.md  environment.yml
WMS/: environment.yml  geoserver_config.json  geoserver_workspace.py  geoserver_workspace_s.py  geoserver_workspace_si.py  shapefile_to_parquet.py
dashboard/: dashboard-idp.ipynb  dashboard-idp.py  dashboard-idp_dynamic_stac.py  testing_variables.ipynb
dashboard/Examples/: dashboard-example.ipynb  leaf-functionalities.ipynb  sol.ipynb
dashboards/: requirements.txt
dashboards/Salinity_Intrusion_Mekong_Dashboard/: README.txt  app.py  general.py  map.py  pyproject.toml  salinity_dashboard.py
dashboards/Salinity_Intrusion_Mekong_Dashboard/pages/: hazard.py  home.py  impact.py
dashboards/Salinity_Intrusion_Mekong_Dashboard/solara_mekong/: app.py
dashboards/Salinity_Intrusion_Mekong_Dashboard/solara_mekong/data/: production_value_2050.csv  provc.dbf  provc.geojson  provc.shp  provc.shx
dashboards/Salinity_Intrusion_Mekong_Dashboard/solara_mekong/pages/: hazard.py  home.py  impact.py
dashboards/Salinity_Intrusion_Mekong_Dashboard/solara_mekong/utils/: general.py  map.py
dashboards/Salinity_Intrusion_Mekong_Dashboard/utils/: general.py
environments/: environment.yml  solara_dashboard.yaml
examples/: dashboard-example.ipynb  dashboard-example.py  get_data_from_STAC.ipynb  get_data_from_STAC_odc.ipynb  get_data_from_STAC_salinity.ipynb
examples/delta-dtm-line-plot/: delta-dtm-line-plot.ipynb  line-plot.py  pyproject.toml
examples/delta-dtm-line-plot/src/: main.py
(+12 files in other folders)
